--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: pip install .
 
       - name: Run tests
-        run: pytest --cov-branch --cov-report=xml
+        run: pytest --cov-branch --cov-report=xml --cov-report=xml:coverage.xml
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
