--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Run tests
         run: pytest --cov-branch --cov-report=xml --cov-report=xml:coverage.xml
 
+      - name: List files
+        run: ls -al
+
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
         with:
